# pg_analytics

./: .codespellignore  .gitattributes  .gitignore  .pre-commit-config.yaml  @  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  META.json.in  Makefile  README.md  pg_analytics.control
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: assign-github-issue.yml  benchmark-pg_analytics.yml  check-pg_analytics-schema-upgrade.yml  check-typo.yml  lint-pr-title.yml  lint-rust.yml  pgxn-release.yml  publish-github-release.yml  publish-pg_analytics-debian.yml  publish-pg_analytics-macos.yml  publish-pg_analytics-pgxn.yml  publish-pg_analytics-rhel.yml  publish-pg_analytics-ubuntu.yml  publish-pg_analytics.yml  test-pg_analytics-upgrade.yml  test-pg_analytics.yml
docs/formats/: parquet.mdx
pg_analytics/: Cargo.toml
pg_analytics/sql/: pg_analytics--0.1.1--0.1.2.sql  pg_analytics--0.1.2--0.1.3.sql  pg_analytics--0.1.3--0.1.4.sql  pg_analytics--0.1.4--0.2.0.sql
pg_analytics/src/: debug_guc.rs  lib.rs
pg_analytics/src/api/: time_bucket.rs
pg_analytics/src/duckdb/: connection.rs  csv.rs  delta.rs  secret.rs  spatial.rs
pg_analytics/src/fdw/: base.rs  iceberg.rs  json.rs  parquet.rs  spatial.rs  trigger.rs
pg_analytics/src/hooks/: executor.rs  mod.rs  query.rs  utility.rs
pg_analytics/src/schema/: cell.rs
pg_analytics/tests/: datetime.rs  explain.rs  json.rs  scan.rs  spatial.rs  table_config.rs
pg_analytics/tests/fixtures/: db.rs
pg_analytics_benches/: Cargo.toml
pg_analytics_benches/benches/: cache_performance.rs
pga_fixtures/: Cargo.toml
pga_fixtures/src/: db.rs  lib.rs
pga_fixtures/src/tables/: auto_sales.rs
sql/: pg_analytics--0.1.0--0.1.1.sql  pg_analytics--0.2.0--0.2.1.sql  pg_analytics--0.2.1--0.2.2.sql  pg_analytics--0.2.2--0.2.3.sql  pg_analytics--0.2.3--0.2.4.sql  pg_analytics--0.2.4--0.3.0.sql  pg_analytics--0.3.0--0.3.1.sql  pg_analytics--0.3.1--0.3.2.sql  pg_analytics--0.3.2--0.3.3.sql  pg_analytics--0.3.3--0.3.4.sql  pg_analytics--0.3.4--0.3.5.sql  pg_analytics--0.3.5--0.3.6.sql  pg_analytics--0.3.6--0.3.7.sql
src/: debug_guc.rs  env.rs  lib.rs
src/api/: csv.rs  duckdb.rs  mod.rs  parquet.rs  time_bucket.rs
src/duckdb/: connection.rs  csv.rs  delta.rs  iceberg.rs  json.rs  mod.rs  parquet.rs  secret.rs  spatial.rs  time_bucket.rs  utils.rs
src/fdw/: base.rs  csv.rs  delta.rs  handler.rs  iceberg.rs  json.rs  mod.rs  parquet.rs  spatial.rs  trigger.rs
src/guc/: mod.rs
src/hooks/: executor.rs  mod.rs  query.rs  utility.rs
src/hooks/utility/: explain.rs  prepare.rs  view.rs
src/schema/: cell.rs  datetime.rs  mod.rs
tests/: Cargo.toml  README.md  datetime.rs  explain.rs  json.rs  scan.rs  settings.rs  spatial.rs  table_config.rs  test_mlp_auto_sales.rs  test_nyc_taxi_trip_partitioned_table.rs  test_prime.rs  test_secv1.rs  time_bucket.rs
tests/common/: duckdb_utils.rs  mod.rs  print_utils.rs
tests/data/: test.geojson
tests/datasets/: mod.rs
tests/datasets/auto_sales/: mod.rs
tests/fixtures/: arrow.rs  db.rs  mod.rs  print_utils.rs  utils.rs
tests/fixtures/tables/: auto_sales.rs  duckdb_types.rs  mod.rs  user_session_logs.rs
tests/sqllogictests/: Cargo.toml  README.md
tests/sqllogictests/src/: arrow.rs  conversion.rs  engine.rs  error.rs  lib.rs  normalize.rs  output.rs
tests/sqllogictests/test_files/: demo.slt  explain.slt  scan.slt
tests/tests/: datetime.rs  explain.rs  json.rs  parquet.rs  scan.rs  settings.rs  spatial.rs  table_config.rs
tests/tests/fixtures/: arrow.rs  db.rs  mod.rs
tests/tests/fixtures/tables/: duckdb_types.rs  mod.rs
