[package]
name = "pg_analytics"
description = "Postgres for analytics, powered by DuckDB"
version = "0.2.1"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "supabase-wrappers/pg13"]
pg14 = ["pgrx/pg14", "supabase-wrappers/pg14"]
pg15 = ["pgrx/pg15", "supabase-wrappers/pg15"]
pg16 = ["pgrx/pg16", "supabase-wrappers/pg16"]
pg17 = ["pgrx/pg17", "supabase-wrappers/pg17"]
pg_test = []

[dependencies]
anyhow = "1.0.88"
async-std = { version = "1.13.0", features = ["tokio1", "attributes"] }
chrono = "0.4.38"
duckdb = { git = "https://github.com/paradedb/duckdb-rs.git", features = [
  "bundled",
  "extensions-full",
], rev = "e532dd6" }
pgrx = "0.12.6"
serde_json = "1.0.128"
signal-hook = "0.3.17"
sqlparser = "0.50.0"
strum = { version = "0.26.3", features = ["derive"] }
supabase-wrappers = { git = "https://github.com/paradedb/wrappers.git", default-features = false, rev = "f5ecb8d" }
thiserror = "1.0.63"
uuid = "1.10.0"

[dev-dependencies]


[[bin]]
name = "pgrx_embed_pg_analytics"
path = "src/bin/pgrx_embed.rs"

[workspace]
resolver = "2"
members = ["tests"]
