[package]
name = "pg_analytics"
description = "Postgres for analytics, powered by DuckDB"
version = "0.2.1"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "supabase-wrappers/pg13"]
pg14 = ["pgrx/pg14", "supabase-wrappers/pg14"]
pg15 = ["pgrx/pg15", "supabase-wrappers/pg15"]
pg16 = ["pgrx/pg16", "supabase-wrappers/pg16"]
pg17 = ["pgrx/pg17", "supabase-wrappers/pg17"]
pg_test = []

[dependencies]
anyhow = { workspace = true }
async-std = { workspace = true }
chrono = { workspace = true }
duckdb = { git = "https://github.com/paradedb/duckdb-rs.git", features = [
  "bundled",
  "extensions-full",
], rev = "e532dd6" }
pgrx = { workspace = true }
serde_json = "1.0.128"
signal-hook = "0.3.17"
sqlparser = { workspace = true }
strum = { version = "0.26.3", features = ["derive"] }
supabase-wrappers = { git = "https://github.com/paradedb/wrappers.git", default-features = false, rev = "f5ecb8d" }
thiserror = { workspace = true }
uuid = "1.10.0"

[dev-dependencies]


[[bin]]
name = "pgrx_embed_pg_analytics"
path = "src/bin/pgrx_embed.rs"

[workspace]
resolver = "2"
members = ["tests", "tests/sqllogictests"]

[workspace.dependencies]
anyhow = "1.0.89"
async-std = { version = "1.13.0", features = ["tokio1", "attributes"] }
thiserror = "1.0.64"
sqlx = { version = "0.7.4", features = [
  "postgres",
  "runtime-async-std",
  "time",
  "bigdecimal",
  "uuid",
  "chrono",
] }
pgrx = "0.12.5"
chrono = "0.4.19"
datafusion = "37.1.0"
sqlparser = "0.50.0"
