[package]
name = "pg_analytics_benches"
version = "0.1.0"
edition = "2021"

workspace = ".."

[features]
default = ["pg16"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
anyhow = "1.0.83"
async-std = { version = "1.12.0", features = ["tokio1", "attributes"] }
chrono = "0.4.34"
duckdb = { git = "https://github.com/paradedb/duckdb-rs.git", features = [
  "bundled",
  "extensions-full",
], rev = "e532dd6" }
pgrx = "0.12.1"
serde = "1.0.201"
serde_json = "1.0.120"
signal-hook = "0.3.17"
strum = { version = "0.26.3", features = ["derive"] }
shared = { git = "https://github.com/paradedb/paradedb.git", rev = "e6c285e" }
supabase-wrappers = { git = "https://github.com/paradedb/wrappers.git", default-features = false, rev = "19d6132" }
thiserror = "1.0.59"
uuid = "1.9.1"
heapless = "0.7.16"

[dev-dependencies]
aws-config = "1.5.1"
aws-sdk-s3 = "1.34.0"
bigdecimal = { version = "0.3.0", features = ["serde"] }
bytes = "1.7.1"
datafusion = "37.1.0"
deltalake = { version = "0.17.3", features = ["datafusion"] }
futures = "0.3.30"
pgrx-tests = "0.12.1"
rstest = "0.19.0"
serde_arrow = { version = "0.11.3", features = ["arrow-51"] }
soa_derive = "0.13.0"
sqlx = { version = "0.7.3", features = [
  "postgres",
  "runtime-async-std",
  "time",
  "bigdecimal",
  "uuid",
  "chrono",
] }
tempfile = "3.12.0"
testcontainers = { version = "0.22.0" }
testcontainers-modules = { version = "0.10.0", features = ["localstack"] }
time = { version = "0.3.34", features = ["serde", "macros", "local-offset"] }
geojson = "0.24.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
rand = { version = "0.8.5" }
approx = "0.5.1"
prettytable = { version = "0.10.0" }
once_cell = "1.19.0"
criterion = { version = "0.4", features = ["async_tokio"] }
tokio = { version = "1.0", features = ["full"] }
cargo_metadata = { version = "0.18.0" }
camino = { version = "1.0.7", features = ["serde1"] }

[[bench]]
name = "cache_performance"
harness = false
