[package]
name = "tests"
description = "Test suite for pg_analytics"
version = "0.3.2"
edition = "2021"
license = "PostgreSQL"

[lib]
crate-type = ["rlib"]

[features]
pg17 = ["pgrx/pg17"]
pg16 = ["pgrx/pg16"]
pg15 = ["pgrx/pg15"]
pg14 = ["pgrx/pg14"]
pg13 = ["pgrx/pg13"]

[dependencies]

[dev-dependencies]
anyhow = "1.0.88"
async-std = { version = "1.13.0", features = ["tokio1", "attributes"] }
chrono = "0.4.38"
duckdb = { git = "https://github.com/paradedb/duckdb-rs.git", features = [
  "bundled",
  "extensions-full",
], rev = "e532dd6" }
pgrx = "0.12.7"
serde = "1.0.210"
serde_json = "1.0.128"
signal-hook = "0.3.17"
thiserror = "1.0.63"
uuid = "1.10.0"
aws-config = "1.5.6"
aws-sdk-s3 = "1.49.0"
bigdecimal = { version = "0.3.1", features = ["serde"] }
bytes = "1.7.1"
datafusion = "37.1.0"
deltalake = { version = "0.17.3", features = ["datafusion"] }
futures = "0.3.30"
rstest = "0.19.0"
serde_arrow = { version = "0.11.7", features = ["arrow-51"] }
soa_derive = "0.13.0"
sqlx = { version = "0.7.4", features = [
  "postgres",
  "runtime-async-std",
  "time",
  "bigdecimal",
  "uuid",
  "chrono",
] }
tempfile = "3.12.0"
testcontainers = "0.16.7"
testcontainers-modules = { version = "0.4.3", features = ["localstack"] }
time = { version = "0.3.36", features = ["serde"] }
geojson = "0.24.1"
